009 ==> 369656 - Corrections to Metadata Editor section.
010 ==> 364258 - 4.x application configuration rc files are ignored
011 ==> 357944 - wrong encoded collection paths after upgrade from digikam v4.x
012 ==> 368968 - Geo bookmarks are not migrated from version 4 to version 5
013 ==> 368794 - digiKam crashes with lossy dng image.
014 ==> 370190 - Trash is shown twice.
015 ==> 366019 - digiKam Crashes when Table view button is clicked.
016 ==> 370331 - Menu dropdown Color / Enhance / Decorate / Effects not working.
017 ==> 370252 - In picture editor the menus "color", "enhance", "decorate" and "effects" are empty.
018 ==> 370287 - Crash rotating image taken with Casio camera.
019 ==> 370298 - Slider behaviour, e.g. in 'local contrast'.
020 ==> 370427 - Reset To Default Button Causes Duplication of List Items When Configuring Metadata.
021 ==> 369345 - In tagging apply to all versions fails.
022 ==> 370631 - Converting ARW to DNG fails.
023 ==> 370175 - Cannot Import Images (Failed to detect camera with GPhoto2 from Solid information).
024 ==> 370958 - Cannot save a scanned image.
025 ==> 370943 - Cannot Select EXIF or IPTC Metadata Subspaces.
026 ==> 371066 - Crash whenever right-clicking in Albums area under the albums list.
027 ==> 371072 - Edit Advanced Search does not show selected labels.
028 ==> 370942 - Advanced Metadata Write Options Ineffective.
029 ==> 371142 - digikam5 does not start when SD card with photos is inserted to computer.
030 ==> 371517 - Thumbnail view is not rotated, but the image preview is rotated ok.
031 ==> 367640 - Crash when decoding Canon 550D RAW file using VNG interpolation with libraw 0.18.
032 ==> 368862 - Thumbnails for Olympus raw (ORF) in albumview are blurred.
033 ==> 371627 - Enlarging Thumbnail On Map Results in Large Blue Circle.
034 ==> 371951 - Thumbnail recreation is blocking.
035 ==> 368124 - Face tag inside album view is case sensitive.
036 ==> 